#19 - Ajustes script e implementação final de IA